--- a/usergroup0.html
+++ b/usergroup0.html
@@ -92,6 +92,7 @@ var searchBox = new SearchBox("searchBox", "search",false,'Search');
       <li><a href="flatbuffers_guide_use_javascript.html"><span>Use&#160;in&#160;JavaScript</span></a></li>
       <li><a href="flatbuffers_guide_use_php.html"><span>Use&#160;in&#160;PHP</span></a></li>
       <li><a href="flatbuffers_guide_use_python.html"><span>Use&#160;in&#160;Python</span></a></li>
+      <li><a href="flexbuffers.html"><span>Schema-less&#160;version</span></a></li>
     </ul>
   </div>
 </div><!-- top -->
@@ -140,6 +141,7 @@ $(document).ready(function(){initNavTree('usergroup0.html','');});
 <li><a href="flatbuffers_guide_use_javascript.html"><span>Use&#160;in&#160;JavaScript</span></a></li>
 <li><a href="flatbuffers_guide_use_php.html"><span>Use&#160;in&#160;PHP</span></a></li>
 <li><a href="flatbuffers_guide_use_python.html"><span>Use&#160;in&#160;Python</span></a></li>
+<li><a href="flexbuffers.html"><span>Schema-less&#160;version</span></a></li>
 </ul>
 </div><!-- contents -->
 </div><!-- doc-content -->
