--- a/contributing.html
+++ b/contributing.html
@@ -119,7 +119,7 @@ $(document).ready(function(){initNavTree('contributing.html','');});
 <h1>Code reviews</h1>
 <p>All submissions, including submissions by project members, require review. We use Github pull requests for this purpose.</p>
 <p>Some tips for good pull requests:</p><ul>
-<li>Use our code <a href="http://google-styleguide.googlecode.com/svn/trunk/cppguide.html">style guide</a>. When in doubt, try to stay true to the existing code of the project.</li>
+<li>Use our code <a href="https://google.github.io/styleguide/cppguide.html">style guide</a>. When in doubt, try to stay true to the existing code of the project.</li>
 <li>Write a descriptive commit message. What problem are you solving and what are the consequences? Where and what did you test? Some good tips: <a href="http://robots.thoughtbot.com/5-useful-tips-for-a-better-commit-message">here</a> and <a href="https://www.kernel.org/doc/Documentation/SubmittingPatches">here</a>.</li>
 <li>If your PR consists of multiple commits which are successive improvements / fixes to your first commit, consider squashing them into a single commit (<code>git rebase -i</code>) such that your PR is a single commit on top of the current HEAD. This make reviewing the code so much easier, and our history more readable.</li>
 </ul>
