--- a/flatbuffers_guide_using_schema_compiler.html
+++ b/flatbuffers_guide_using_schema_compiler.html
@@ -159,6 +159,8 @@ $(document).ready(function(){initNavTree('flatbuffers_guide_using_schema_compile
 <li><code>--conform FILE</code> : Specify a schema the following schemas should be an evolution of. Gives errors if not. Useful to check if schema modifications don't break schema evolution rules.</li>
 <li><code>--include-prefix PATH</code> : Prefix this path to any generated include statements.</li>
 <li><code>--keep-prefix</code> : Keep original prefix of schema include statement.</li>
+<li><code>--reflect-types</code> : Add minimal type reflection to code generation.</li>
+<li><code>--reflect-names</code> : Add minimal type/name reflection.</li>
 </ul>
 <p>NOTE: short-form options for generators are deprecated, use the long form whenever possible. </p>
 </div></div><!-- contents -->
