--- a/usergroup0.html
+++ b/usergroup0.html
@@ -101,6 +101,7 @@ $(document).ready(function(){initNavTree('usergroup0.html','');});
 <li><a href="flatbuffers_guide_use_go.html"><span>Use&#160;in&#160;Go</span></a></li>
 <li><a href="flatbuffers_guide_use_java_c-sharp.html"><span>Use&#160;in&#160;Java/C#</span></a></li>
 <li><a href="flatbuffers_guide_use_javascript.html"><span>Use&#160;in&#160;JavaScript</span></a></li>
+<li><a href="@ref flatbuffers_guide_use_typescript"><span>Use&#160;in&#160;TypeScript</span></a></li>
 <li><a href="flatbuffers_guide_use_php.html"><span>Use&#160;in&#160;PHP</span></a></li>
 <li><a href="flatbuffers_guide_use_python.html"><span>Use&#160;in&#160;Python</span></a></li>
 <li><a href="flexbuffers.html"><span>Schema-less&#160;version</span></a></li>
